--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,14 @@
 cmake_minimum_required(VERSION 3.22.2 FATAL_ERROR)
 
-PROJECT(cmake)
+set(PROJECT_NAME cmake)
+PROJECT(${PROJECT_NAME})
 
 add_executable(cmake src/main.cpp)
+
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+
+add_subdirectory(exec/glfw)
+target_link_libraries(${PROJECT_NAME} glfw)
